added cave map, various materials, various effects

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,10 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=DC148EAF46ADB4C6C7B67BB1F162D2D2
-ProjectName=First Person BP Game Template
+ProjectName=Mavis Beacon Teaches Strafing
+CompanyName=Noah Witherspoon
+CopyrightNotice=2018 Noah Witherspoon
+LicensingTerms=MIT
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BlueprintNativizationMethod=Inclusive
+
