miscellaneous finishing touches and fixes for game-breaking shit

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,5 +6,10 @@ CopyrightNotice=2018 Noah Witherspoon
 LicensingTerms=MIT
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-BlueprintNativizationMethod=Inclusive
+BlueprintNativizationMethod=Disabled
+BuildConfiguration=PPBC_Shipping
+FullRebuild=True
+ForDistribution=True
+IncludeAppLocalPrerequisites=True
+ApplocalPrerequisitesDirectory=(Path="$(EngineDir)/Binaries/Win64")
 
