various improvements / changes for distribution and 1.1
added difficulty curve, sprinting, scores, healing; switched to forward renderer (perf)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -14,6 +14,8 @@ GlobalDefaultServerGameMode=None
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_9
 
+[/Script/Engine.EndUserSettings]
+bSendAnonymousUsageDataToEpic=False
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/LD41")
@@ -87,6 +89,13 @@ EnableEnvironmentQueryEd=true
 +CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
+
+[/Script/Engine.RendererSettings]
+r.NormalMapsForStaticLighting=True
+r.SeparateTranslucency=False
+r.DefaultFeature.MotionBlur=False
+r.SelectiveBasePassOutputs=True
+r.ForwardShading=True
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
